Rotating feature names to be more legible. Potential fix for #1

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,4 @@
 .app {
      /* Add app styles here */
+  min-height: 600px;
 }
